# wemo-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  LICENSE  MCP_REGISTRY_SUBMISSION.md  QUICK_START.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.3.0.md  SECURITY.md  TODO.md  config.example.yaml  pyproject.toml  server.json  smithery.yaml  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  PYPI_PUBLISHING.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  pypi-publish.yml  release.yml  test.yml
.well-known/mcp/: server-card.json
docs/: PUBLISHING.md
docs/archive/: MIGRATION.md  PUBLISHING_AUTOMATION.md  PYPI_PUBLISHING.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md
scripts/: validate.sh
src/wemo_mcp_server/: __init__.py  cache.py  config.py  error_handling.py  models.py  server.py
tests/: test_e2e.py  test_models.py  test_phase2.py  test_server.py
